<resources>
    <string name="app_name">FarmGuardian</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="healthDetailInstruction">Upload images for AI diseases analysis, especially of visual livestock symptoms. While AI provides high accurate feedback, avoid complete reliance on it.</string>
    <string name="sell_your_equipment">Sell Your Equipment</string>
    <string name="enter_equipment_name">Enter Equipment Name</string>
    <string name="enter_equipment_description">Enter Equipment Description</string>
    <string name="enter_equipment_price_usd">Enter Equipment Price (USD)</string>
    <string name="upload_image">Upload Image</string>
    <string name="sell">Sell</string>
    <string name="my_list">My list</string>
    <string name="sell_your_livestock">Sell your livestock</string>
    <string name="type_of_livestock">Type of livestock</string>
    <string name="livestock_description">Livestock description</string>
    <string name="selling_price">Selling price</string>
    <string name="chat">chat</string>
    <string name="send">Send</string>
    <string name="type_your_message">Hello, how can I help…</string>
    <string name="bot">Dr Bot</string>
    <string name="user">You</string>
    <string name="myprofile_pic">myProfile pic</string>
    <string name="lets_chat">Lets chat</string>
    <string name="warning">Responses from this model should not replace professional medical advice</string>
</resources>