<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ChatDR">


    <LinearLayout
        android:id="@+id/headingchat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:id="@+id/backchat"
            android:layout_height="wrap_content"
            android:src="@drawable/back">

        </ImageView>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lets_chat"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="110dp"
            android:textColor="@color/DarkGreen"
            android:layout_marginBottom="24dp"/>



    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:layout_marginTop="45dp"
        android:id="@+id/warn"
        android:text="@string/warning">

    </TextView>


    <!-- RecyclerView to display previous chat messages -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/editTextMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warn"
        tools:listitem="@layout/item_chat_message"/>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/process"
        android:progressTint="@color/DarkGreen"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewChat"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewChat"
        tools:ignore="MissingConstraints">

    </ProgressBar>

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="0dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewChat"
        android:autofillHints="" />

    <!-- Button to send message -->
    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextMessage"/>

    <!-- TextView to display responses -->
    <TextView
        android:id="@+id/textViewResponse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editTextMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>
