<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1dp">

    <!-- Layout for user message -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/userMessageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                app:tint="@color/DarkGreen"
                android:src="@drawable/ic_baseline_person_24"
                android:contentDescription="@string/myprofile_pic">

            </ImageView>

            <TextView
                android:id="@+id/userTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textColor="@color/DarkGreen"
                android:padding="3dp" />

        </LinearLayout>
        <TextView
            android:id="@+id/userText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:padding="3dp" />
    </LinearLayout>

    <!-- Layout for bot message -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/botMessageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/dr"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/myprofile_pic"
                app:tint="@color/DarkGreen">

            </ImageView>

            <TextView
                android:id="@+id/botTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bot"
                android:textStyle="bold"
                android:padding="3dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/DarkGreen"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="8dp"/>

        </LinearLayout>
        <TextView
            android:id="@+id/botText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginStart="15dp"
            android:padding="3dp" />
    </LinearLayout>


</LinearLayout>
